Fixed buttons distortion

--- a/templates/styles.css
+++ b/templates/styles.css
@@ -1,4 +1,4 @@
-** {
+* {
     box-sizing: border-box;
     margin: 0;
     height: 0;
@@ -13,55 +13,62 @@
     top: 2%;
     right: 3%;
     border-radius: 6%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    
 }
 
-
-.camera_button{
-    width: 17%;
+.camera_button,
+.map_button,
+.emergency_button,
+.ai_button {
+    width: 150px;
     height: 150px;
-    margin: 3% 0 0 71%;
     background-size: cover;
+    border: none;
+    cursor: pointer;
+    margin-top: -55%;
+}
+
+.camera_button {
     background-image: url('images/logo.jpg');
     border-radius: 50%;
-    border: none;
-    cursor: pointer;
 }
 
-.map_button{
-    width: 17%;
-    height: 150px;
-    margin: 3% 0px 0 71%;
-    background-size: cover;
+.map_button {
     background-image: url('images/map.jpg');
     border-radius: 5%;
-    border: none;
-    cursor: pointer;
 }
 
 .emergency_button {
-    width: 17%;
-    height: 150px; 
-    margin: 4% 0 0 71%; 
-    background-size: cover;
     background-image: url('images/ecall.jpg');
     border-radius: 5%;
-    border: none;
-    cursor: pointer;
 }
 
-.ai_button{
-    width: 17%;
-    height: 150px;
-    margin: 3% 0px 0 71%;
-    background-size: cover;
+.ai_button {
     background-image: url('images/robot.jpg');
     border-radius: 5%;
-    border: none;
-    cursor: pointer;
 }
 
-.gphoto{
-    background:#1A3141 ;
+.ebutton,
+.aibutton,
+.mbutton,
+.cbutton {
+    text-align: center;
+}
+
+.ebutton_writing,
+.aibutton_writing,
+.mapbutton_writing,
+.cambutton_writing {
+    color: white;
+    font-size: 130%;
+}
+
+.gphoto {
+    background: #1A3141;
     height: 40%;
     width: 50%;
     position: fixed;
@@ -70,13 +77,13 @@
     top: 6%;
 }
 
-.gphoto :first-child{
+.gphoto h1 {
     margin: 4% 4% 0 30%;
     color: white;
 }
 
-.bphoto{
-    background:#1A3141 ;
+.bphoto {
+    background: #1A3141;
     height: 40%;
     width: 50%;
     position: fixed;
@@ -85,36 +92,7 @@
     top: 50%;
 }
 
-.bphoto :first-child{
+.bphoto h1 {
     margin: 4% 4% 10% 30%;
     color: white;
 }
-
-
-.ebutton_writing{
-    color: white;
-    font-size: 130%;
-    margin: 2% 0px 0 73%;
-}
-
-.aibutton_writing{
-    color: white;
-    z-index: 1;
-    font-size: 130%;
-    margin: 2% 0 0 73%;
-}
-
-.mapbutton_writing{
-    color: white;
-    z-index: 1;
-    font-size: 130%;
-    margin: 2% 0 0 74%;
-}
-
-.cambutton_writing{
-    color: white;
-    z-index: 1;
-    font-size: 130%;
-    margin: 2% 0 0 76%;
-} 
-
